Устранение недочётов SonarLint